# ez-audio-studio

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  index.html  package-lock.json  package.json  run-app.sh  tailwind.config.ts  vite.config.ts
electron/: main.js  preload.js
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_loader.rs  audio_processor.rs  audio_types.rs  main.rs
src/components/: AudioProcessor.tsx  AudioVisualizer.tsx  SettingsButton.tsx  StudioControls.tsx  SystemStatus.tsx  WarningOverlay.tsx  WaveformSeek.tsx
src/components/ui/: button.tsx  slider.tsx  switch.tsx
src/lib/: audio-buffer-utils.ts  browser-compatibility.ts  feature-test.ts  linux-optimizations.ts  network-security.ts  opengl-optimizations.ts  performance.ts  rust-audio-processor.ts  security.ts  tauri-api.ts  test-optimizations.ts  verification.ts
src/pages/: AdvancedStudio.tsx  Studio.tsx
src/types/: electron.d.ts  tauri.d.ts
