[package]
name = "ez-audio-studio"
version = "1.0.0"
description = "A professional audio studio application with real-time effects and advanced processing"
authors = ["copiuum <contact@copiuum.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "devtools"] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]