[package]
name = "ez-audio-studio"
version = "1.0.0"
description = "A professional audio studio application with real-time effects and advanced processing"
authors = ["copiuum <contact@copiuum.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "devtools"] }
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Audio processing dependencies
hound = "3.5"          # WAV file I/O
rubato = "0.15"        # Sample rate conversion
cpal = "0.15"          # Cross-platform audio I/O
apodize = "1.0"        # Audio windowing functions
realfft = "3.3"        # Real-valued FFT
rustfft = "6.2"        # Complex FFT
dasp = "0.11"          # Digital audio signal processing
rodio = "0.19"         # Audio playback
symphonia = { version = "0.5", features = ["all"] } # Audio decoding
rand = "0.8"          # Random number generation for reverb

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]